--- a/css/style.css
+++ b/css/style.css
@@ -245,8 +245,8 @@ header {
 
 @media screen and (max-width: 767px) {
   #portfolio_top {
-    height: auto;
-    margin-bottom: 70%;
+    height: 127vh;
+    /* margin-bottom: 70%; */
   }
 
   .portfolio_top01 {
@@ -254,7 +254,7 @@ header {
   }
 
   .portfolio_tree img {
-    width: 67%;
+    width: 68.5vw;
   }
 
   .portfolio_title {
@@ -264,12 +264,12 @@ header {
   }
 
   .portfolio_title01 {
-    font-size: 24px;
-    margin-bottom: 10px;
+    font-size: 6.4vw;
+    margin-bottom: 3%;
   }
 
   .portfolio_title02 {
-    font-size: 12px;
+    font-size: 3.2vw;
     margin-left: 3px;
   }
 
@@ -289,7 +289,7 @@ header {
 
   .sp_portfolio_lead-ja {
     line-height: 1.5;
-    font-size: 24px;
+    font-size: 6.4vw;
     font-family: "a-otf-ryumin-pr6n", serif;
     font-weight: 300;
     font-style: normal;
@@ -300,7 +300,7 @@ header {
   }
 
   .sp_portfolio_lead-en {
-    font-size: 12px;
+    font-size: 3.2vw;
     margin-left: 0;
     width: 100%;
   }
@@ -321,12 +321,14 @@ header {
   position: relative;
   text-align: right;
   height: 100%;
+  width: 100%;
 }
 
 .portfolio_top03 {
   position: absolute;
   right: 0;
   height: 100%;
+  /* width: 100%; */
   z-index: 2000;
 }
 
@@ -337,6 +339,11 @@ header {
 }
 
 @media screen and (max-width: 1100px) {
+  .portfolio_top03 {
+    width: 100%;
+    z-index: 2000;
+  }
+
   #scroll_container {
     flex-direction: column;
   }
@@ -402,8 +409,8 @@ header {
 
   .sp_btn {
     position: absolute;
-    top: 50px;
-    right: 25px;
+    top: 5%;
+    right: 5%;
     display: block;
     height: 23px;
     cursor: pointer;
@@ -411,19 +418,18 @@ header {
   }
   .sp_btn span {
     display: block;
-    width: 67px;
-    height: 3px;
+    width: 13.3vw;
+    height: 0.5vw;
     background: #c67039;
     border-radius: 3px;
     position: relative;
-    top: 10px;
     transition: 0.3s;
   }
   .sp_btn span::before {
     content: "";
     display: block;
-    width: 67px;
-    height: 3px;
+    width: 13.3vw;
+    height: 0.5vw;
     background: #c67039;
     border-radius: 3px;
     position: absolute;
@@ -431,7 +437,7 @@ header {
   }
 
   .sp_btn span::before {
-    bottom: 12px;
+    bottom: 500%;
   }
 
   /* .sp_btn.open span {
@@ -449,11 +455,11 @@ header {
   }
 
   /* SP版メニュー */
-  /* .sp_nav_list {
+  .sp_nav_list {
     position: absolute;
     top: 0;
-    right: 0;
-    width: 100vw;
+    left: 0;
+    width: 100%;
     height: 100vh;
     background: rgba(0, 0, 0, 0.8);
     z-index: 1;
@@ -462,6 +468,7 @@ header {
   .sp_nav_list ul {
     display: flex;
     flex-direction: column;
+    width: 100%;
     height: 100%;
     align-items: center;
     justify-content: center;
@@ -474,7 +481,7 @@ header {
     font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "メイリオ",
       "Hiragino Kaku Gothic ProN", "Hiragino Sans", sans-serif;
     font-weight: bold;
-  } */
+  }
 }
 
 .top_scroll {
@@ -515,7 +522,7 @@ header {
   .sp_top_scroll {
     display: block;
     position: static;
-    font-size: 20px;
+    font-size: 3.4vw;
     font-family: "zen-kaku-gothic-new", sans-serif;
     font-weight: 700;
     font-style: normal;
@@ -526,11 +533,15 @@ header {
   .sp_top_scroll::after {
     content: "";
     width: 3px;
-    height: 200px;
+    height: 20vh;
     background-color: #c67039;
     display: flex;
     flex-direction: column;
-    margin: 20px auto;
+    margin: 6% auto;
+  }
+
+  .mgr-20 {
+    margin-right: 5%;
   }
 }
 
@@ -769,19 +780,20 @@ header {
   }
 
   .sp_portfolio_menu .menu_title {
-    font-size: 50px;
+    font-size: 13.3vw;
     padding-left: 0;
     margin: 0;
-    margin-bottom: 22px;
+    margin-bottom: 12%;
   }
 
   .sp_portfolio_menu .menu_title::before {
-    width: 38px;
-    margin-right: 12px;
+    width: 10vw;
+    margin-right: 3%;
   }
 
   .sp_menu_subtitle {
     text-align: center;
+    font-size: 5.3vw;
   }
 
   .service_img {
