--- a/css/style.css
+++ b/css/style.css
@@ -784,6 +784,7 @@ header {
     padding-left: 0;
     margin: 0;
     margin-bottom: 12%;
+    color: #ffffff;
   }
 
   .sp_portfolio_menu .menu_title::before {
@@ -823,6 +824,15 @@ header {
     margin-left: 0;
   }
 
+  .card-img div {
+    width: 48vw;
+    height: 48vw;
+  }
+
+  .card-img img {
+    width: 19.4vw;
+  }
+
   .card_wrapper {
     margin: 0 auto;
   }
@@ -833,16 +843,16 @@ header {
   }
 
   .card-title {
-    font-size: 24px;
-    margin: 24px 0 10px;
+    font-size: 6.4vw;
+    margin: 8% 0 4%;
   }
 
   .card-app {
-    font-size: 14px;
+    font-size: 3.7vw;
   }
 
   .card-text {
-    font-size: 15px;
+    font-size: 4vw;
   }
 }
 
@@ -986,22 +996,24 @@ header {
   #works_contents .portfolio_menu {
     position: static;
     margin-left: 0;
+    margin-bottom: 11%;
   }
 
   #works_contents .portfolio_menu .menu_title {
-    font-size: 50px;
+    font-size: 13.3vw;
     padding-left: 0;
-    margin: 0 0 20px;
+    margin: 0;
+    margin-bottom: 6%;
     justify-content: center;
   }
 
   #works_contents .portfolio_menu .menu_title::before {
-    width: 38px;
-    margin-right: 12px;
+    width: 10vw;
+    margin-right: 3%;
   }
 
   #works_contents .portfolio_menu .menu_subtitle {
-    font-size: 20px;
+    font-size: 5.3vw;
     margin-left: 0;
     text-align: center;
     padding-left: 25px;
@@ -1011,15 +1023,16 @@ header {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 16px;
-    width: 165px;
-    height: 56px;
+    font-size: 4.2vw;
+    width: 46.1vw;
+    height: 14%;
+    border-radius: 7.4vw;
   }
 
   .works_btn::after {
-    width: 8px;
-    height: 8px;
-    margin-left: 3px;
+    width: 2.1vw;
+    height: 2.1vw;
+    margin-left: 1%;
   }
 
   .about_img01 {
@@ -1140,48 +1153,50 @@ header {
   }
 
   #about_contents .portfolio_menu .menu_title {
-    font-size: 50px;
+    font-size: 13.3vw;
     padding-left: 0;
-    margin: 0 0 20px;
+    margin: 0;
+    margin-bottom: 6%;
     justify-content: center;
   }
 
   #about_contents .portfolio_menu .menu_title::before {
-    width: 38px;
-    margin-right: 12px;
+    width: 10vw;
+    margin-right: 3%;
   }
 
   #about_contents .portfolio_menu .menu_subtitle {
-    font-size: 20px;
+    font-size: 5.3vw;
     margin-left: 0;
     text-align: center;
     padding-left: 25px;
   }
 
   .about_portrait img {
-    width: 70%;
+    width: 72.8vw;
   }
 
   .name {
     display: block;
     text-align: center;
-    margin-bottom: 58px;
+    margin-bottom: 16%;
   }
 
   .name01 {
-    font-size: 28px;
+    font-size: 7.4vw;
     padding-right: 0;
-    margin-bottom: 15px;
+    margin-bottom: 4%;
   }
 
   .name02 {
-    font-size: 17px;
+    font-size: 4.5vw;
   }
 
   .profile_text {
     display: flex;
     justify-content: center;
-    margin: 0 40px;
+    margin: 0 10%;
+    font-size: 3.7vw;
   }
 }
 
@@ -1227,7 +1242,7 @@ header {
   color: #56402b;
   width: 640px;
   margin: auto 0;
-  margin-left: 8%;
+  margin-left: 9%;
   z-index: 100;
 }
 
@@ -1275,6 +1290,10 @@ header {
   margin: 47px auto 0;
 }
 
+#contact_contents .portfolio_menu .sp_menu_text {
+  display: none;
+}
+
 @media screen and (max-width: 1100px) {
   #contact_contents {
     flex-direction: column;
@@ -1303,36 +1322,45 @@ header {
 }
 
 @media screen and (max-width: 767px) {
+  #contact_contents .portfolio_menu .menu_text {
+    display: none;
+  }
+
   #contact_contents .portfolio_menu {
     position: static;
     margin-left: 0;
+    margin-bottom: 11%;
   }
 
   #contact_contents .portfolio_menu .menu_title {
-    font-size: 50px;
+    font-size: 13.3vw;
     padding-left: 0;
-    margin: 0 0 20px;
+    margin: 0;
+    margin-bottom: 6%;
     justify-content: center;
   }
 
   #contact_contents .portfolio_menu .menu_title::before {
-    width: 38px;
-    margin-right: 12px;
+    width: 10vw;
+    margin-right: 3%;
   }
 
   #contact_contents .portfolio_menu .menu_subtitle {
-    font-size: 20px;
+    font-size: 5.3vw;
     margin-left: 0;
     text-align: center;
     padding-left: 25px;
     margin-bottom: 45px;
   }
 
-  #contact_contents .portfolio_menu .menu_text {
+  #contact_contents .portfolio_menu .sp_menu_text {
+    display: block;
     margin-left: 0;
-    font-size: 15px;
+    font-size: 4vw;
     width: 76%;
     margin: auto;
+    color: #56402b;
+    line-height: 2.25;
   }
 }
 
