--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,48 @@ header {
   width: 45vw;
 }
 
+/* .portfolio_tree {
+  animation: portfolio_tree 2s infinite ease-in-out alternate-reverse;
+}
+
+@keyframes portfolio_tree {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(30px);
+  }
+} */
+
+.portfolio_tree {
+  animation: portfolio_tree 1s ease-in-out infinite alternate-reverse;
+}
+.tree_img {
+  animation: tree_img 1.2s ease-in-out infinite alternate-reverse;
+}
+@keyframes portfolio_tree {
+  0% {
+    transform: translateX(-10px);
+  }
+  100% {
+    transform: translateX(10px);
+  }
+}
+@keyframes tree_img {
+  0% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(5px);
+  }
+}
+
+.tree_img {
+  margin-top: -5px;
+  margin-left: -100px;
+}
+
 .portfolio_title {
   position: absolute;
   top: 10%;
@@ -188,16 +230,21 @@ header {
     /* height: 995px; */
   }
 
-  .portfolio_tree img {
+  .portfolio_top01 {
+    height: auto;
+  }
+
+  .tree_img {
     width: 140%;
   }
 
   .portfolio_title01 {
-    font-size: 30px;
+    font-size: 3.3vw;
+    margin-bottom: 4%;
   }
 
   .portfolio_title02 {
-    font-size: 15px;
+    font-size: 1.7vw;
   }
 
   .portfolio_top02 {
@@ -208,6 +255,18 @@ header {
 
   .top_img img {
     width: 65vw;
+  }
+
+  .portfolio_lead {
+    top: 42%;
+  }
+
+  .portfolio_lead-ja {
+    font-size: 3.6vw;
+  }
+
+  .portfolio_lead-en {
+    font-size: 1.3vw;
   }
 }
 
@@ -222,8 +281,28 @@ header {
     height: auto;
   }
 
-  .portfolio_tree img {
+  .tree_img {
     width: 68.5vw;
+    margin-top: -1px;
+    margin-left: -20px;
+  }
+
+  @keyframes portfolio_tree {
+    0% {
+      transform: translateX(-5px);
+    }
+    100% {
+      transform: translateX(5px);
+    }
+  }
+
+  @keyframes tree_img {
+    0% {
+      transform: translateY(-1px);
+    }
+    100% {
+      transform: translateY(1px);
+    }
   }
 
   .portfolio_title {
@@ -377,8 +456,8 @@ header {
 
   .sp_btn {
     position: absolute;
-    top: 5%;
-    right: 5%;
+    top: 8%;
+    right: 3%;
     display: block;
     height: 23px;
     cursor: pointer;
@@ -386,7 +465,7 @@ header {
   }
   .sp_btn span {
     display: block;
-    width: 13.3vw;
+    width: 9vw;
     height: 0.5vw;
     background: #c67039;
     border-radius: 3px;
@@ -396,7 +475,7 @@ header {
   .sp_btn span::before {
     content: "";
     display: block;
-    width: 13.3vw;
+    width: 9vw;
     height: 0.5vw;
     background: #c67039;
     border-radius: 3px;
@@ -452,6 +531,12 @@ header {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .sp_btn {
+    top: 5%;
+  }
+}
+
 .top_scroll {
   position: fixed;
   top: 89%;
@@ -490,7 +575,7 @@ header {
   .sp_top_scroll {
     display: block;
     position: static;
-    font-size: 3.4vw;
+    font-size: 2.2vw;
     font-family: "zen-kaku-gothic-new", sans-serif;
     font-weight: 700;
     font-style: normal;
@@ -505,7 +590,7 @@ header {
     background-color: #c67039;
     display: flex;
     flex-direction: column;
-    margin: 6% auto;
+    margin: 5% auto;
   }
 
   .mgr-20 {
@@ -670,6 +755,10 @@ header {
 }
 
 @media screen and (max-width: 1100px) {
+  .service_img img {
+    height: auto;
+  }
+
   .sp_portfolio_menu {
     display: block;
   }
@@ -922,11 +1011,35 @@ header {
   object-position: center;
 }
 
+.about_img-1 {
+  display: flex;
+  animation: about_img-1 1s ease-in-out infinite alternate-reverse;
+}
+
 .about_img01 {
   display: flex;
   align-items: flex-end;
   z-index: 100;
   margin-left: 5%;
+  margin-bottom: -5%;
+  animation: about_img01 1.2s ease-in-out infinite alternate-reverse;
+}
+
+@keyframes about_img-1 {
+  0% {
+    transform: translateX(-15px);
+  }
+  100% {
+    transform: translateX(15px);
+  }
+}
+@keyframes about_img01 {
+  0% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(5px);
+  }
 }
 
 .about_img02 {
@@ -959,6 +1072,10 @@ header {
 
   .swiper {
     width: 90%;
+  }
+
+  .about_img-1 {
+    display: block;
   }
 }
 
@@ -1011,6 +1128,33 @@ header {
     width: 2.1vw;
     height: 2.1vw;
     margin-left: 1%;
+  }
+
+  .about_img-1 {
+    animation: about_img-1 1s ease-in-out infinite alternate-reverse;
+  }
+
+  .about_img01 {
+    margin-left: -5px;
+    margin-bottom: -5%;
+    animation: about_img01 1.2s ease-in-out infinite alternate-reverse;
+  }
+
+  @keyframes about_img-1 {
+    0% {
+      transform: translateX(-1px);
+    }
+    100% {
+      transform: translateX(1px);
+    }
+  }
+  @keyframes about_img01 {
+    0% {
+      transform: translateY(-5px);
+    }
+    100% {
+      transform: translateY(5px);
+    }
   }
 
   .about_img01 {
@@ -1370,6 +1514,28 @@ footer {
 .footer_img {
   position: relative;
   margin-left: -200px;
+  animation: footer_img 1s ease-in-out infinite alternate-reverse;
+}
+
+.footer_img01 {
+  margin-right: -10px;
+  animation: footer_img01 1.2s ease-in-out infinite alternate-reverse;
+}
+@keyframes footer_img {
+  0% {
+    transform: translateX(-10px);
+  }
+  100% {
+    transform: translateX(10px);
+  }
+}
+@keyframes footer_img01 {
+  0% {
+    transform: translateY(-7px);
+  }
+  100% {
+    transform: translateY(7px);
+  }
 }
 
 .copyright {
@@ -1452,6 +1618,9 @@ textarea.c-form_input {
 
   .footer_img {
     width: 100%;
+  }
+
+  .footer_img01 {
     display: flex;
     justify-content: flex-end;
   }
@@ -1497,6 +1666,32 @@ textarea.c-form_input {
 
   .c-form_submit button {
     font-size: 16px;
+  }
+
+  .footer_img-1 {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .footer_img01 {
+    margin-right: -10px;
+    animation: footer_img01 1.2s ease-in-out infinite alternate-reverse;
+  }
+  @keyframes footer_img {
+    0% {
+      transform: translateX(-5px);
+    }
+    100% {
+      transform: translateX(5px);
+    }
+  }
+  @keyframes footer_img01 {
+    0% {
+      transform: translateY(-1px);
+    }
+    100% {
+      transform: translateY(1px);
+    }
   }
 
   .footer_img img {
