--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,24 @@ header {
   -ms-writing-mode: tb-rl;
   writing-mode: vertical-rl;
   font-feature-settings: initial;
+  animation-name: portfolio_lead-ja;
+  animation-duration: 2s;
+  animation-timing-function: ease-out;
+  animation-delay: 1s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+}
+
+@keyframes portfolio_lead-ja {
+  0% {
+    opacity: 0;
+    /* transform: translate3d(30px, 0, 0); */
+  }
+  100% {
+    opacity: 1;
+    /* transform: translate3d(0, 0, 0); */
+  }
 }
 
 .portfolio_lead-en {
@@ -213,6 +231,28 @@ header {
   left: 57%;
   width: 70vw;
   /* margin: 6% 0 0 -17%; */
+}
+
+.top_img {
+  /* // アニメーション設定 */
+  animation-name: top_img;
+  animation-duration: 2s;
+  animation-timing-function: ease-out;
+  animation-delay: 1s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+}
+
+@keyframes top_img {
+  0% {
+    opacity: 0;
+    transform: translate3d(30px, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 @media screen and (max-width: 1100px) {
